--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -15,8 +15,6 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
-@import url('https://fonts.cdnfonts.com/css/svn-gilroy');
-
 body{
     font-family: 'SVN-Gilroy', sans-serif;
     font-style: normal;
@@ -209,17 +207,93 @@ h2{
     text-transform: capitalize;
 }
 
+/* Pets */
+.pets{
+    padding: 86px 130px 60px;
+}
+
+.pets__title{
+    font-family: 'SVN-Gilroy', sans-serif;
+    color:#003459;
+    padding-bottom: 28px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: capitalize;
+}
+
+.pets__items{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 28px;
+}
+
+.pets__items-card{
+    display: inline-flex;
+    padding: 8px 8px 10px 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 12px;
+
+    background: #FDFDFD;
+    box-shadow: 0px 4px 28px -2px rgba(0, 0, 0, 0.08);
+}
+
+
+.pets__info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+}
+
+.pets__info-name{
+    align-self: stretch;
+    color: #00171F;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.pets__info-age{
+    color:#667479;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px
+}
+
+.pets__info-age span{
+    font-weight: 500;
+}
+
+.pets__info-vnd{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+
+    color: #00171F;
+}
+
+
 /* Banner */
 .banner{
     background: url("../images/Banner.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 20px;
 
     display: flex;
     flex-direction: column;
     align-items: end;
     padding: 64px 85px 56px 0;
+    margin: 60px 130px; 
 }
 
 .banner__title{
@@ -267,4 +341,427 @@ h2{
     border: 1.5px solid #003459;
     background-color:   transparent;
     color: #002A48;
+}
+
+/* Products */
+
+.products{
+    padding: 86px 130px 60px;
+}
+
+.products__title{
+    font-family: 'SVN-Gilroy', sans-serif;
+    color:#003459;
+    padding-bottom: 28px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: capitalize;
+}
+
+.products__items{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 28px;
+}
+
+.products__card{
+    display: inline-flex;
+    padding: 8px 8px 10px 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 12px;
+
+    background: #FDFDFD;
+    box-shadow: 0px 4px 28px -2px rgba(0, 0, 0, 0.08);
+}
+
+
+.products__info{
+    display: flex;
+    padding: 8px 8px 20px 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    width: 248px;
+}
+
+.products__info-title{
+    align-self: stretch;
+    color: #00171F;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.products__info-name{
+    color:#667479;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px
+}
+
+.products__info-name span{
+    font-weight: 500;
+}
+
+.products__info-vnd{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+
+    color: #00171F;
+}
+
+.products__btn-img{
+    display: flex;
+    padding: 6px 10px 4px 10px;
+    align-items: center;
+    gap: 2px;
+
+    border-radius: 8px;
+    background:#FCEED5;
+    width: 248px;
+    color: #002A48;
+    
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.products__btn-img img{
+    padding-right: 20px;
+}
+
+
+/* Pet Sellers */
+
+.sellers{
+    padding: 40px 130px;
+}
+
+.sellers__title{
+    padding-bottom: 43px;
+
+    color: #000;
+    font-family: "SVN-Gilroy", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 31px;
+}
+
+.sellers__title span{
+    padding-left: 4px;
+    vertical-align: middle;
+    color: #003459;
+    font-family: "SVN-Gilroy", sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: capitalize;
+}
+
+.sellers__logo{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sellers__logo img{
+    padding: 0px 10px;
+    vertical-align: middle;
+}
+
+
+/* Adoption */
+
+.adoption{
+    background: url("../images/Adoption.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 64px 0 56px 85px;
+    margin: 0 130px; 
+    border-radius: 20px;
+}
+
+.adoption img {
+    vertical-align: middle;
+}
+
+.adoption h1{
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 68px;
+    text-transform: capitalize;
+}
+
+.adoption h2{
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 54px; /* 150% */
+    text-transform: capitalize;
+}
+
+.adoption__title-p{
+    text-align: start;
+    width: 200px;
+    padding-top: 10px;
+    padding-bottom: 34px;
+    color:#242B33;
+
+    font-family: 'SVN-Gilroy', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px;
+}
+
+.adoption__title-btn{
+    display: flex;
+    gap: 20px;
+}
+
+.adoption__title-btn button{
+    font-family: 'SVN-Gilroy', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+
+    padding: 14px 28px;
+    border-radius: 57px;
+    width: 163px;
+    color:#FDFDFD;
+    border: 1.5px solid #003459;
+    background-color: #002A48;
+}
+
+.adoption__title-btn button:hover{
+    border: 1.5px solid #003459;
+    background-color:   transparent;
+    color: #002A48;
+}
+
+
+/* Knowledge */
+
+.knowledge{
+    padding: 86px 130px 60px;
+}
+
+.knowledge__title{
+    font-family: 'SVN-Gilroy', sans-serif;
+    color:#003459;
+    padding-bottom: 28px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: capitalize;
+}
+
+.knowledge__items{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.knowledge__card{
+    display: inline-flex;
+    padding: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 12px;
+    background: #FFF;
+
+    box-shadow: 0px 4px 28px -2px rgba(0, 0, 0, 0.08);
+}
+
+.knowledge__blog{
+    display: flex;
+    padding: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    
+}
+
+.knowledge__blog-title{
+    color: #00171F;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; 
+    width: 348px;
+}
+
+.knowledge__blog-info{
+    color: #242B33;
+    text-overflow: ellipsis;
+    max-width: 348px;
+
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; 
+}
+
+/* Footer */
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 60px;
+    
+    border-radius: 40px 40px 0px 0px;
+    background: linear-gradient(103deg, #FCEED5 6.43%, #FCEED5 78.33%, #FFE7BA 104.24%);
+}
+
+.footer__send{
+    display: flex;
+    flex-direction: row;
+    margin: 80px 130px 0; 
+    padding: 32px;
+    gap: 20px;
+    border-radius: 16px;
+    background: #003459
+}
+
+.footer__send-title{
+    font-family: "SVN-Gilroy", sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: capitalize;
+    color: #FDFDFD;
+    width: 389px;
+}
+
+.footer__send-input{
+    display: flex;
+    width: 707px;
+    padding: 12px;
+    align-items: center;
+    gap: 12px;
+
+    border-radius: 14px;
+    background: #FFF;
+}
+
+.footer__send-input input{
+    display: flex;
+    padding: 14px 28px;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+
+    border-radius: 8px;
+    border: 1px solid var(--neutral-color-40, #99A2A5);
+    background: #FFF;
+}
+
+.footer__send-input button{
+    display: flex;
+    padding: 10px 28px 10px 28px;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+
+    color: #FDFDFD;
+    border-radius: 8px;
+    background: #003459;
+}
+
+.footer__nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 0;
+    margin: 0 130px;
+
+    border-bottom: 1px solid  #CCD1D2;
+}
+
+.footer__nav-link{
+    display: flex;
+    align-items: flex-start;    
+    gap: 60px;
+    
+}
+
+.footer__nav-link a{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+
+    color:  #00171F;
+    font-family: "SVN-Gilroy", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.footer__nav-social{
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+}
+
+.footer__nav-social a i{
+    font-size: 24px;
+    color: #00171F;
+}
+
+.footer__end{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0;
+    margin: 0 130px;
+
+    color: #667479;
+    font-family: "SVN-Gilroy", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+}
+
+.footer__end-logo{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.footer__end-logo span{
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+
+    text-align: center;
+    color: #00171F;
 }
